image url fix + z-index

--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,7 @@
   height: 100vh;
   background-color: hsl(185, 75%, 39%);
   position: relative;
+  z-index: -1;
 }
 
 .flex {
@@ -18,6 +19,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  z-index: 999;
 }
 .card {
   width: 80%;
@@ -25,7 +27,7 @@
   font-family: 'Kumbh Sans', sans-serif;
 }
 .profile_section {
-  background-image: url('/images/bg-pattern-card.svg');
+  background-image: url('images/bg-pattern-card.svg');
   position: relative;
   height: 110px;
   border-top-left-radius: 10px;
@@ -92,9 +94,11 @@
   position: fixed;
   bottom: 50%;
   right: 50%;
+  z-index: -1;
 }
 .bottom_pattern {
   position: fixed;
   top: 50%;
   left: 50%;
+  z-index: -1;
 }
